<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">EyeRS</string>

    <!-- Strings related to Register Activity -->

    <string name="txtWelcomeMsg">Welcome!</string>
    <string name="txtRequiredFields">*All fields are required*</string>
    <string name="btnRegister">Register</string>
    <string name="createPinHint">Enter your new PIN</string>
    <string name="confirmPinHint">Verify your new PIN</string>
    <string name="btnClearReg">Clear</string>
    <string name="enterUsernameHint">Enter your new Username</string>
    <string name="enterEmailHint">Enter your Email Address</string>
    <string name="txtSecurityQuestions">Select a security question using the drop-down list</string>

    <!-- Strings related to Set Pin Activity -->

    <string name="txtWelcome">Welcome !</string>
    <string name="txtWelcomeDesc">Make Life Easy\n with eyeRS</string>
    <string name="txtPinRequired">This is a required field!</string>
    <string name="txtSecurityQtn">Please select a security question</string>
    <string name="txtSecurityResponse">Security Response</string>
    <string name="responseHint">Your security answer</string>
    <string name="validateUsername">Enter your username</string>
    <string name="btnResetPIN">Reset</string>
    <string name="btnClearPIN">Clear</string>
    <string name="enterPinHint">Enter your new PIN here</string>
    <string name="validationMsg">*Enter the Security details you used during the Registration process*</string>

    <!-- Strings related to Login Activity -->

    <string name="btnLogin">Login</string>
    <string name="btnForgotPin">Forgot your PIN?</string>
    <string name="txtWelcomeDescLogin">Make your life easy with EyeRS</string>
    <string name="txtPinRequest">Enter your PIN</string>
    <string name="EnterPinHint">PIN must be at least 4 digits</string>
    <string name="txtForgotPin">Forgot your PIN?</string>
    <string name="edtTxtPin">Please enter your PIN</string>

    <!-- Strings related to App activities -->

    <string name="title_activity_login">EyeRS</string>
    <string name="title_activity_main">My Stuff</string>
    <string name="title_activity_view_item">My Items</string>
    <string name="title_activity_new_item">My new Item</string>
    <string name="title_activity_help">Help &amp; Tips</string>
    <string name="title_activity_register">My Registration</string>
    <string name="title_activity_set_pin">Reset my PIN</string>
    <string name="title_activity_about">About EyeRS</string>
    <string name="title_activity_slideshow">My Slideshow</string>
    <string name="title_activity_view_items">My Items</string>
    <string name="title_activity_item_detail">Item Details</string>
    <string name="title_activity_new_category">My new Category</string>
    <string name="title_activity_app_settings">My Settings</string>
    <string name="title_activity_display_settings">Display</string>
    <string name="title_activity_sound_settings">Sound</string>
    <string name="title_activity_category_mgmt_settings">Category Management</string>
    <string name="title_activity_sorting">Select Sorting Preference</string>
    <string name="title_activity_profile_settings">My Profile</string>
    <string name="title_activity_item_mgmt_settings">Item Management</string>

    <!--Strings related to New Activity -->

    <string name="txtItemTitle">Name of item</string>
    <string name="txtItemDesc">Item description</string>
    <string name="btnAddItem">Add</string>
    <string name="txtSelectCategory">Select a category using the drop-down list</string>

    <!-- Strings related to New Category Activity -->
    <string name="txtCategoryName">Category Name</string>
    <string name="txtCategoryDesc">Description</string>
    <string name="btnAddCat">Add</string>
    <string name="txtCategoryIcon">Select an icon using the drop-down list</string>

    <!-- Item stock label strings -->
    <string name="lblName">Name</string>
    <string name="lblSymbol">Symbol</string>

    <!-- This section defines strings relating to the AppSettings Activity -->

    <string-array name="settings_titles">
        <item>Security</item>
        <item>Display</item>
        <item>Profile</item>
        <item>Sound</item>
        <item>Category management</item>
        <item>Item management</item>
        <item>Help &amp; tips</item>
        <item>About</item>
    </string-array>

    <!-- Sound Settings -->
    <string name="WelcomeMsg">Welcome Message</string>
    <string name="TouchMsg">Touch Sounds</string>

    <!-- Security Settings -->
    <string name="pref_header_security">Security</string>

    <!-- Display Settings -->
    <string name="selectChangeTheme">Change Theme</string>
    <string name="selectChangetheme">Change Theme:</string>
    <string name="selectChangeFont">Change Font</string>
    <string name="selectChangefont">Change Font:</string>
    <string name="selectChangeFontSize">Change Font Size</string>
    <string name="selectChangefontsize">Change Font Size:</string>


    <!-- Profile Settings -->
    <string name="pref_header_profile">Profile</string>
    <string name="displayName">Please enter your display name</string>
    <string name="saveBtn">Save changes</string>

    <!-- Category Settings -->
    <string-array name="category_mgmt_titles">
        <item>Add Category</item>
        <item>Edit Category</item>
        <item>Delete Category</item>
        <item>Change Sorting</item>

    </string-array>

    <!-- Category Sorting -->
    <string name="asc_descMsg">Alphabetically</string>
    <string name="recently_add_Msg">Recently Added</string>

    <!-- Item Management Settings -->
    <string-array name="item_titles">
        <item>Add Item</item>
        <item>Edit Item</item>
        <item>Delete Item</item>
        <item>Change Sorting</item>

    </string-array>


    <!-- About Settings -->
    <string name="pref_header_about">About</string>
    <string name="pref_title_about">About eyeRS</string>


    <!-- Strings related to Side Menu drawer -->

    <string name="nav_header">Android Studio</string>
    <string name="nav_header_addr">android.studio@android.com</string>
    <string name="contentDescr">User details</string>

    <string name="nav_new_item">Add new item</string>
    <string name="nav_new_category">Add new category</string>
    <string name="nav_slideshow">Slideshow</string>
    <string name="nav_settings">Settings</string>
    <string name="item_comm">Communicate</string>
    <string name="nav_share">Share</string>
    <string name="nav_trade">Trade</string>
    <string name="item_misc">Miscellaneous</string>
    <string name="nav_help">Help &amp; Tips</string>
    <string name="nav_about">About</string>
    <string name="nav_exit">Exit</string>


    <!-- Strings related to Main Activity -->

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="txtBooks">Books</string>
    <string name="txtClothes">Clothes</string>
    <string name="txtAccessories">Accessories</string>
    <string name="txtGames">Games</string>
    <string name="txtOther">Other</string>
    <string name="txtAddCat">Add Category&#8230;</string>

    <string-array name="titles">
        <item>Home</item>
        <item>Add New Item</item>
        <item>Add New Category</item>
        <item>Slideshow</item>
        <item>Settings</item>
        <item>Share</item>
        <item>Trade</item>
        <item>Helps and Tips</item>
        <item>About</item>
    </string-array>

    <!-- Strings related to Change font type -->
    <string-array name="font_types">
        <item>Default</item>
        <item>Arial</item>
        <item>Antonio</item>
        <item>Candy</item>
        <item>DroidSans</item>
    </string-array>

    <!-- Strings related to Change font type -->
    <string-array name="font_size">
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <!-- Strings related to Help Activity -->

    <string name="txtHelp">Help</string>
    <string name="btnFeedback">Send Feedback</string>

    <!-- Strings related to About Activity -->
    <string name="appDesc">The organised life experience!</string>
    <string name="txtAppCap">Version 1, November 2017</string>
    <string name="cpyRight">Copyright &#169; 2017 eyeRS Dev</string>

    <!-- Strings related to Search Activity -->
    <string name="action_search">Search &#8230;</string>

    <!-- Strings related to Send message action -->

    <string name="chooser">Send message&#8230;</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="title_activity_search">SearchActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_cam_test">CamTestActivity</string>
    <string name="title_activity_share">ShareActivity</string>
    <string name="title_activity_trade">TradeActivity</string>

</resources>
